# ttt-cache-lab

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: feasibility_hf_qwen_0_5b.yaml  feasibility_hf_tiny.yaml  feasibility_toy.yaml  sweep_hf_tiny_norm.yaml  sweep_toy_update_norm.yaml  versioned_sweep_e5_delta_qwen_0_5b.yaml  versioned_sweep_e6_context_qwen_1_5b.yaml  versioned_sweep_e7_boundary_qwen_0_5b.yaml  versioned_sweep_e7_boundary_toy.yaml
configs/experiments/: ascend_e1_static_adapter_baseline_qwen_0_5b.yaml  ascend_e2_task_ability_qwen_1_5b.yaml  ascend_e2_version_drift_gemma_3_4b.yaml  ascend_e2_version_drift_llama_3_1_8b.yaml  ascend_e2_version_drift_llama_3_2_1b.yaml  ascend_e2_version_drift_llama_3_2_3b.yaml  ascend_e2_version_drift_mistral_7b_v0_1.yaml  ascend_e2_version_drift_mistral_7b_v0_3.yaml  ascend_e2_version_drift_qwen1_5_moe_a2_7b.yaml  ascend_e2_version_drift_qwen_0_5b.yaml  ascend_e2_version_drift_qwen_1_5b.yaml  ascend_e2_version_drift_qwen_32b_8npu.yaml  ascend_e2_version_drift_qwen_7b.yaml  ascend_e3_failure_map_qwen_0_5b.yaml  ascend_e4_planner_main_qwen_0_5b.yaml  ascend_e5_delta_correction_qwen_0_5b.yaml  ascend_e6_scaling_qwen_1_5b_32k.yaml  (+33 more)
docs/: ascend.md  design.md  experiment_plan.md  paper_experiment_protocol.md  project_plan.md  runbook.md
scripts/: finalize_formal_20260712.py  finalize_paper_calibration.sh  finalize_paper_stage.sh  formal_matrix_20260712.py  generate_delta_quantization_sweep.py  prepare_modelscope_config.py  run_ascend_architecture_single.sh  run_ascend_e2_parallel.sh  run_ascend_e2_single.sh  run_ascend_smoke.sh  run_calibrated_planner.sh  run_feasibility.sh  run_formal_matrix_20260712.sh  run_model_sharded.sh  run_paper_shard.sh  run_toy_study.sh  summarize_delta_quantization_sweep.py
tests/: test_analysis_outputs.py  test_ascend_config.py  test_block_ranker.py  test_blockwise.py  test_boundary_analysis.py  test_cache_blocks.py  test_data_loader.py  test_dynamic_controller.py  test_dynamic_probe_model.py  test_failures.py  test_formal_matrix.py  test_hf_architecture_support.py  test_hf_backend.py  test_hf_delta_correction.py  test_hf_integration.py  test_mainline_task_quality.py  test_measurement.py  test_metrics.py  test_model_configs.py  test_model_sharding.py  test_paper_configs.py  test_planner.py  test_propagation_analysis.py  test_report.py  test_results.py  test_run_metadata.py  test_runner.py  test_static_adapters.py  test_statistics.py  test_study.py  test_study_analysis.py  test_summarize.py  test_sweep.py  test_synthetic.py  test_targets.py  test_task_probe.py  test_task_scoring.py  test_toy_backend.py  test_updater.py  test_versioned_runner.py  (+2 more)
(+158 files in other folders)
