[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ttt-cache-lab"
version = "0.1.0"
description = "Experiments for KV cache consistency under inference-time parameter evolution"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Yuhang Cao"}]
dependencies = [
  "numpy>=1.24",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
]
hf = [
  "torch>=2.2",
  "transformers>=4.45",
  "accelerate>=0.33",
  "datasets>=2.20",
]

[project.scripts]
ttt-cache-lab = "ttt_cache_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"


[[tool.mypy.overrides]]
module = ["torch", "transformers"]
ignore_missing_imports = true
